fix overflow

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -208,8 +208,8 @@ footer p {
 }
 .profile-photo img {
   border-radius: 50%;
-  width: 30%; /* Adjust to the desired width */
-  height: 30%; /* Adjust to the desired height */
+  width: 100%; /* Adjust to the desired width */
+  height: 100%; /* Adjust to the desired height */
   object-fit: none;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
   margin-bottom: 10px;
@@ -347,4 +347,11 @@ ul li {
   .section ul li {
     flex: 1 1 100%; /* Stack items for smaller screens */
   }
+}
+
+/*fix overflow*/
+.clearfix::after {
+  content: "";
+  display: table;
+  clear: both;
 }
